[project]
name = "NodeVis"
version = "0.1.0"
description = "A cross-platform Python tool for visualizing SageMotion (or other IMU) quaternion CSV/XLSX data with synchronized 3D model animation using VTK."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "scipy>=1.16.0",
    "vtk>=9.5.0",
]
